--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ img.logo {
     height: auto;
 }
 
-.container {
+.card-container {
     width: 1500 px;
     margin: auto;
     margin-top: 30px;
@@ -12,6 +12,7 @@ img.logo {
 .card {
     float: left;
     width: 350px;
+    margin: auto;
 }
 
 .frame {
@@ -23,9 +24,27 @@ img.logo {
 
 #char-pic {
     width: 300px;
-    margin: auto;
+    margin: 14px;
+    margin-top: 0px;
 }
 
 #character-name{
     text-align: center;
 }
+
+main{
+    width: 100%;
+    padding: 2rem;
+}
+
+aside{
+    padding: 0;
+}
+
+.info-container {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
