Added Aside bar

--- a/style.css
+++ b/style.css
@@ -156,3 +156,8 @@ aside{
     flex-direction: row;
     justify-content: space-between;
   }
+
+#mainCharList {
+    float: left;
+    position: relative;
+}
