--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+header{
+    background-color: lightslategray;
+}
+header h2{
+    padding: 5px;
+}
+#char-form{
+    background-color: lightslategray;
+
+}
 img.logo {
     width: 300px;
     height: auto;
@@ -38,23 +48,40 @@ img.logo {
     margin-bottom: 3px;
 }
 
-main{
+.info-main{
     width: 100%;
     padding: 2rem;
+    background:black;
+    color: white;
+    background-image: url(https://images.newscientist.com/wp-content/uploads/2020/05/22112120/sagdig_opo0431b_web.jpg);
 }
 
-aside{
+.info-main p span{
+    background-color: rgba(119.0, 136.0, 153.0, 0.6);
+}
+
+.info-main ul span{
+    background-color: rgba(119.0, 136.0, 153.0, 0.6);
+
+}
+
+.info-main ul li span{
+    background-color: rgba(119.0, 136.0, 153.0, 0.6);
+}
+
+.info-list{
     padding: 0;
     background: black;
     color: white;
     text-align: center;
+    margin-top: 0;
 }
 
-aside h3{
+.info-list h3{
     margin: 3px;
 }
 
-aside img{
+.info-list img{
     margin: 10px;
 }
 
@@ -64,11 +91,38 @@ aside img{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
 }
 
-main{
-    background:black;
-    color: green;
+#mainpage{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#mainpage main{
+    width: 100%;
+    background-image: url(https://images.newscientist.com/wp-content/uploads/2020/05/22112120/sagdig_opo0431b_web.jpg);
+}
+
+#mainpage aside{
+    padding: 0px;
+    background-color:lightslategray;
+    margin-top: 0px;
+}
+
+#mainpage ul{
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#mainpage ul li{
+    list-style-type: none;
+    padding:8px;
+    font-size: 18px;
+    font-weight: normal;
 }
 
 .spoiler{
